# PictureCompression

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/kim/hsl/pc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/kim/hsl/pc/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/kim/hsl/pc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
